# marchingalgo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/marchingalgo/: LICENSE.txt  __init__.py  _find_contours.py  _find_contours_cy.pyx  _marching_cubes_lewiner.py  _marching_cubes_lewiner_cy.pyx
