[metadata]
name = marchingalgo
author = El Hadi Moussi
author_email = moussi@phimeca.com
description = Marching algorithms extracted from scikit-image
long_description = file: README.md
keywords = marching,algorithms

[options.packages.find]
where = src

[options]
package_dir = 
    = src
packages = find_namespace:
install_requires =
    numpy
    importlib-metadata